@@ -1,5 +1,10 @@
 2002-03-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+        * server-src/amstatus.pl.in: Write "wait to flush" only if waittaper
+	  is requested.
+
+2002-03-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/amstatus.pl.in: Fix for failed tape.
 
 2002-02-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
